<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:minHeight="?android:attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6E6E6"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="16sp"
                    android:textColor="@color/silver"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v4.view.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">>
                </android.support.v4.view.ViewPager>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E6E6E6"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/purpose"
                    android:layout_weight=".3"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/price"
                    android:layout_weight=".4"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    />
                <TextView
                    android:id="@+id/type"
                    android:layout_weight=".3"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/description"
                />

            <TextView
                android:id="@+id/description"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/silver"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/overview"
                />

            <LinearLayout
                android:id="@+id/overview_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E6E6E6"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/indoor_amenities"
                />

            <LinearLayout
                android:id="@+id/indoor_amenities_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E6E6E6"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/outdoor_amenities"
                />

            <LinearLayout
                android:id="@+id/outdoor_amenities_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E6E6E6"
                android:orientation="vertical">
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/distances"
                />

            <LinearLayout
                android:id="@+id/distances_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E6E6E6"
                android:orientation="vertical">
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/location"
                />

            <com.google.android.gms.maps.MapView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/location_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:uber="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:background="#000"
                android:layout_height="match_parent">

                <com.uber.sdk.android.rides.RequestButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    uber:client_id="clientId"
                    uber:style="black"/>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/agent_details_title"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/agent_details"
                />

            <LinearLayout
                android:id="@+id/agent_details_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E6E6E6"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/agent_image"
                    android:layout_height="match_parent"
                    android:layout_weight=".3"
                    android:layout_width="0dip"
                     />
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:background="#E6E6E6"
                    android:layout_weight=".7"
                    android:layout_width="0dip"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:id="@+id/agent_name"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textSize="16sp"
                        android:textColor="@color/silver"
                        android:id="@+id/agent_phone"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:textSize="14sp"
                        android:textColor="@color/silver"
                        android:id="@+id/agent_mail"
                        />


                </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="20pt"
                android:text="Pay"
                android:clickable="true"
                android:id="@+id/pay_link"
                android:background="@color/colorPrimary"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="18sp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text=" "
                />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="20pt"
                    android:text="@string/preview_on_website"
                    android:autoLink="web"
                    android:clickable="true"
                    android:id="@+id/button_link"
                    android:background="@color/colorPrimary"
                    >
                </Button>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
